reports/0041_epi_cert_mutation_full.out/mutants.out/log/crates__tracewake-core__src__debug_reports.rs_line_293_col_5.log

*** crates/tracewake-core/src/debug_reports.rs:293:5: replace controller_binding_report -> ControllerBindingDebugReport with Default::default()

*** mutation diff:
--- crates/tracewake-core/src/debug_reports.rs
+++ replace controller_binding_report -> ControllerBindingDebugReport with Default::default()
@@ -285,33 +285,17 @@
         debug_capability: DebugCapability::mint(),
     }
 }
 
 pub fn controller_binding_report(
     report_id: DebugReportId,
     bindings: &ControllerBindings,
 ) -> ControllerBindingDebugReport {
-    let bindings = bindings
-        .debug_bindings()
-        .into_iter()
-        .map(|binding| {
-            format!(
-                "{}->{:?}@{}",
-                binding.binding.controller_id.as_str(),
-                binding.binding.bound_actor_id,
-                binding.binding.binding_sequence
-            )
-        })
-        .collect();
-    ControllerBindingDebugReport {
-        report_id,
-        bindings,
-        debug_capability: DebugCapability::mint(),
-    }
+    Default::default() /* ~ changed by cargo-mutants ~ */
 }
 
 pub fn phase3a_needs_report(agent_state: &AgentState) -> Phase3ADebugReport {
     let mut rows = Vec::new();
     rows.push(format!(
         "actor_count={}",
         agent_state.needs_by_actor.keys().count()
     ));


*** /home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/cargo test --no-run --verbose --workspace --locked
       Dirty tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core): couldn't read metadata for file `target/debug/deps/libtracewake_core-95b4b25dfac705df.rlib`
   Compiling tracewake-core v0.1.0 (/tmp/cargo-mutants-tracewake-KPbovd.tmp/crates/tracewake-core)
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
     Running `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps`
error[E0277]: the trait bound `ControllerBindingDebugReport: Default` is not satisfied
   --> crates/tracewake-core/src/debug_reports.rs:293:5
    |
293 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `ControllerBindingDebugReport`
   --> crates/tracewake-core/src/debug_reports.rs:76:1
    |
 76 | pub struct ControllerBindingDebugReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

For more information about this error, try `rustc --explain E0277`.
error: could not compile `tracewake-core` (lib) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --crate-type lib --emit=dep-info,metadata,link -C embed-bitcode=no -C debuginfo=2 --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=e33c3a3bd335069b -C extra-filename=-95b4b25dfac705df --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)
warning: build failed, waiting for other jobs to finish...
error[E0277]: the trait bound `debug_reports::ControllerBindingDebugReport: Default` is not satisfied
   --> crates/tracewake-core/src/debug_reports.rs:293:5
    |
293 |     Default::default() /* ~ changed by cargo-mutants ~ */
    |     ^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
    |
help: the trait `Default` is not implemented for `debug_reports::ControllerBindingDebugReport`
   --> crates/tracewake-core/src/debug_reports.rs:76:1
    |
 76 | pub struct ControllerBindingDebugReport {
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: could not compile `tracewake-core` (lib test) due to 1 previous error

Caused by:
  process didn't exit successfully: `/home/joeloverbeck/.rustup/toolchains/1.93.0-x86_64-unknown-linux-gnu/bin/rustc --crate-name tracewake_core --edition=2021 crates/tracewake-core/src/lib.rs --error-format=json --json=diagnostic-rendered-ansi,artifacts,future-incompat --emit=dep-info,link -C embed-bitcode=no -C debuginfo=2 --test --check-cfg 'cfg(docsrs,test)' --check-cfg 'cfg(feature, values())' -C metadata=2fc44e5b19aef358 -C extra-filename=-b96b951b3689326d --out-dir /tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps -C incremental=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/incremental -L dependency=/tmp/cargo-mutants-tracewake-KPbovd.tmp/target/debug/deps` (exit status: 1)

*** result: Failure(101)
